[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-chunkize"
version = "1.0.5"
description = "Chunk pregeneration for Endstone servers"
authors = [{ name = "ozz" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = ["endstone>=0.11"]
keywords = ["endstone", "minecraft", "bedrock", "pregeneration", "chunks"]

[tool.hatch.build.targets.wheel]
packages = ["src/endstone_chunkize"]

[project.entry-points."endstone"]
chunkize = "endstone_chunkize:ChunkizePlugin"

[tool.ruff]
lint.select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming (THIS IS KEY FOR YOUR ISSUE)
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C",      # flake8-comprehensions
    "RUF",    # ruff-specific rules
]

line-length = 88

[tool.ruff.lint.pep8-naming]